Use porechop to trim adapters

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -1,5 +1,12 @@
 process {
     withName: nanoplot {
-        ext.args = "--info_in_report"
+        ext.args = "--tsv_stats"
+    }
+    withName: PORECHOP_PORECHOP {
+        publishDir = [
+            path: { "${params.outdir}/porechop/${meta.id}" },
+            mode: 'copy',
+            enabled: true
+        ]
     }
 }
