--- a/nextflow.config
+++ b/nextflow.config
@@ -21,7 +21,7 @@ profiles {
         singularity.runOptions = '-B $SINGULARITY_TMPDIR:/tmp'
     }
     conda {
-        process.conda = 'environment.yml'
+        process.conda = 'minimal-environment.yml'
         conda.enabled = true
         docker.enabled = false
     }
