Use porechop for trimming primers - customize the adapters file

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -9,4 +9,11 @@ process {
             enabled: true
         ]
     }
+    withName: porechop_custom_adapters {
+        publishDir = [
+            path: { "${params.outdir}/porechop_custom_adapters/${meta.id}" },
+            mode: 'copy'
+        ]
+        ext.prefix = {"${meta.id}-trim-primer"}
+    }
 }
