--- a/nextflow.config
+++ b/nextflow.config
@@ -20,11 +20,10 @@ profiles {
         singularity.envWhitelist = ['SINGULARITY_TMPDIR']
         singularity.runOptions = '-B $SINGULARITY_TMPDIR:/tmp'
     }
-    conda {
-        process.conda = 'minimal-environment.yml'
-        conda.enabled = true
-        docker.enabled = false
-    }
+}
+
+dag {
+    direction = 'LR'
 }
 
 docker.registry = 'quay.io'
