publish quality filtered sequences to output dir

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -16,4 +16,22 @@ process {
         ]
         ext.prefix = {"${meta.id}-trim-primer"}
     }
+    withName: chopper_15 {
+        publishDir = [
+            path: { "${params.outdir}/chopper_15/${meta.id}" },
+            mode: 'copy',
+        ]
+    }
+    withName: chopper_17 {
+        publishDir = [
+            path: { "${params.outdir}/chopper_17/${meta.id}" },
+            mode: 'copy',
+        ]
+    }
+    withName: chopper_20 {
+        publishDir = [
+            path: { "${params.outdir}/chopper_20/${meta.id}" },
+            mode: 'copy',
+        ]
+    }
 }
