Make read filtering params configurable

--- a/nextflow.config
+++ b/nextflow.config
@@ -22,6 +22,14 @@ profiles {
     }
 }
 
+params {
+    readQuality {
+        minQualityPhred = 15
+        minLength = 300
+        maxLength = 6000
+    }
+}
+
 dag {
     direction = 'LR'
 }
